src/App.css
/* ... */
.orbit_closeup_button_outlined:hover {
  background-color: white;
  color: #085988;
}

.orbit_closeup_button_plain {
  margin-top: 0.5%;
  margin-left: 5%;
  font-family: "alternate-gothic-no-1-d", sans-serif;
  -webkit-font-smoothing: antialiased;
  font-size: 45px;
  max-width: 50%;
  width: 154px;
  height: 57px;
  background: 0% 0% no-repeat padding-box;
  border: none;
  cursor: pointer;
  color: #002439;
  white-space: nowrap;
  flex: 0.4;
}

.orbit_closeup_button_plain:hover {
  text-decoration: underline;
  color: #085988;
}

.orbit_closeup_button_plain:active {
  text-decoration: underline;
  color: #085988;
}

.orbit_closeup_button_outlined:active {
  color: #085988;
  border: 2px solid #085988;
}

/*this is the closeup player*/
.leo_orbit_details,
.meo_orbit_details,
.heo_orbit_details,
.gso_orbit_details,
.geo_orbit_details {
  position: absolute;
  top: -10vh;
  height: 100vh;
  opacity: 0%;
  animation-name: fade-in;
  animation-duration: 2s;
  animation-delay: 1s;
  animation-fill-mode: forwards;
}

.static_satellite_closeup {
  animation-name: fly-in-right;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  position: relative;
  left: 9%;
}

@keyframes fly-in-right {
  0% {
    opacity: 0%;
    transform: translateX(100%);
  }

  100% {
    opacity: 90%;
    transform: translateX(0);
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
    visibility: visible;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fade-out-scale {
  0% {
    opacity: 1;
    transform: scale(13);
  }

  50% {
    opacity: 1;
    transform: scale(13);
  }

  100% {
    opacity: 0;
    transform: scale(13);
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }

  100% {
    visibility: hidden;
    opacity: 0;
  }
}

/* EXTRA LARGE */
@media (min-width: 1921px) and (min-height: 1081px) {
  .earth {
    position: absolute;
    height: 350px;
    width: 350px;
    left: 930px;
    top: 280px;
  }

  .player {
    position: absolute;
    height: 900px;
    width: 900px;
    top: 0px;
    left: 650px;
  }
}

/* iPad Air - Landscape */
/* Acceptable */
@media (max-width: 1180px) {
  :root {
    --min-orbit-size: 900px;
  }

  .hard_scale_value {
    transform: scale(0.8) !important;
  }

  .static_satellite_closeup {
    top: -95%;
    left: -28px;
  }

  .earth {
    height: 51%;
  }

  .earth_orbits_container {
    position: relative;
    left: 30vw;
    bottom: 7vh;
    min-height: var(--min-orbit-size);
    max-height: var(--min-orbit-size);
    min-width: var(--min-orbit-size);
    max-width: var(--min-orbit-size);
  }

  .gso_fill {
    height: 95%;
  }

  .geo_fill {
    height: inherit;
  }

  .heo_fill {
    height: 64.8%;
  }

  .meo_fill {
    height: 78%;
  }

  .leo_fill {
    height: 61%;
  }
}

/* iPad Mini - Landscape */
/* Samsung Galaxy Tab S8 - Landscape */
@media (max-width: 1040px) {
  .earth_orbits_container {
    top: -10vh;
  }
}


/*****************************************************************************************************************************************************/

/* 
Note: Because this site is being viewed through an iFrame that has a set height of 900px, adjustments were made to the styling of mobile devices to 
accomodate that. This comes in the form a large amount of empty space on the bottom of the screen. 
Also, some elements appear to overlap, or be awkwardly placed when viewing alone but not when viewed within the staging site.
*/

.hidden {
  display: none !important;
}

.orbit_closeup_back_button_mobile {
  visibility: hidden;
}
/* ... */

